epserde/tests/fail/full_copy_zero_copy.stderr
error: full_copy(...) cannot be used on a zero-copy type, as its deserialization type is a reference
  --> tests/fail/full_copy_zero_copy.rs:12:32
   |
12 | #[epserde(zero_copy, full_copy(T))]
   |                                ^
